tests/solves/does-not-solve-without/expected
1/1: Building Spec (Spec.idr)
Error: Unsolved holes:
Spec.{n:830} introduced at: 
Spec:10:14--10:19
 06 | unXm : X -> Nat
 07 | unXm $ MkX m = m
 08 | 
 09 | Val : Nat
 10 | Val = unXm $ MkX 5
                   ^^^^^

